# WEB_DZ_7

./: README.md  config.ini  main.py  pyproject.toml  requirements.txt
conf/: connect_db.py  models.py
migrations/: env.py
migrations/versions/: e0218959231d_init.py
